[package]
name = "my_anti_trace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
my_anti_trace-common = { path = "../my_anti_trace-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "my_anti_trace"
path = "src/main.rs"
